cloud/backend/alert-management/manifests/base/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: alert-management
  name: alert-management
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: alert-management
  template:
    metadata:
      labels:
        io.kompose.service: alert-management
    spec:
      containers:
        - image: ghcr.io/startupnationlabs/poulet/alert-management:e3911b5eaa38b49c29022ad6c7e83d45884a7f32
          name: alert-management
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
      restartPolicy: Always
