cloud/backend/alert-management/manifests/base/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: alert-management
  name: alert-management
spec:
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
  selector:
    io.kompose.service: alert-management
